<resources>
    <string name="app_name">Game Cabinet</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editor_title_string">Title</string>
    <string name="edit_platform_string">Platform</string>
    <string name="edit_completed_string">Completed</string>
    <string name="title">Title</string>
    <string name="platform">Platform</string>
    <string name="genre">Genre</string>
    <string name="add">Add</string>
    <string name="developer">Developer</string>
    <string name="add_release_string">Release Date</string>
    <string name="action_save">Save</string>
</resources>
